# veldrid-spirv

./: CMakeLists.txt  build-native.sh
.github/workflows/: build.yml  main.yml
